manifest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogs-cats-ingress
spec:
  rules:
  - host: cats-and-dogs-review-app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: dogs-cats-cluster-ip
           port:
             number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: dogs-cats-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 50
      targetPort: 80
  selector:
    app: dogs-cats

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogs-cats-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dogs-cats
  template:
    metadata:
      labels:
        app: dogs-cats
    spec:
      containers:
        - name: nginx
          image: nginx:1.12
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: dogs-cats-configmap

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: animal-storage
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Mi

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: animal-storage
  clusterIP: None
  selector:
    app: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: animal-storage-00
spec:
  ports:
  - port: 80
  selector:
    app: dogs-cats
    statefulset.kubernetes.io/pod-name: animal-storage-0
---
apiVersion: v1
kind: Service
metadata:
  name: animal-storage-11
spec:
  ports:
  - port: 80
  selector:
    app: dogs-cats
    statefulset.kubernetes.io/pod-name: animal-storage-1

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogs-cats-ingress-statefulset
spec:
  rules:
  - host: cats-and-dogs-review-app.com
    http:
      paths:
      - pathType: Prefix
        path: /cats
        backend:
          service:
           name: animal-storage-00
           port:
             number: 80
  - host: cats-and-dogs-review-app.com
    http:
      paths:
      - pathType: Prefix
        path: /dogs
        backend:
          service:
           name: animal-storage-11
           port:
             number: 80

---
